fix: y-axis overflow resolved on main page

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -48,6 +48,9 @@ div.selectionIndicator {
   font-family: 'Gochi Hand', cursive;
   text-decoration: none;
   color: black;
+  position: absolute;
+  left: 0;
+  right: 0;
   text-align: center;
 }
 
